css/style.css
/* ... */
.latest-funding li {
  list-style: none;
}

.latest-funding {
  margin-top: 50px;
}

.ln-mobile-atcl-wrapper {
  display: flex;
  justify-content: flex-start;
  padding: 7.5px 0;
}

.ln-bg-img {
  display: inline-block;
  min-width: 75px;
  height: 75px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.img1 {
  background-image: url('../images/face-masks.jpg');
}

.img2 {
  background-image: url('../images/norway.jpg');
}

.img3 {
  background-image: url('../images/scientists.jpg');
}

.img4 {
  background-image: url('../images/satoshi.png');
}

.img5 {
  background-image: url('../images/india.png');
}

.img6 {
  background-image: url('../images/tnw-deals.jpg');
}

.img7 {
  background-image: url('../images/John-Oliver.jpg');
}

.img8 {
  background-image: url('../images/slack.png');
}

.img9 {
  background-image: url('../images/2020latest.jpg');
}

.img10 {
  background-image: url('../images/complete.jpg');
}

.img11 {
  background-image: url('../images/microsoft.jpg');
}

.img12 {
  background-image: url('../images/python.PNG');
}

.img13 {
  background-image: url('../images/premium.PNG');
}

.img14 {
  background-image: url('../images/freebie-tiger.png');
}

.img15 {
  background-image: url('../images/prep-bundle.png');
}

.img16 {
  background-image: url('../images/stackskills.png');
}

.ln-atcl-head {
  display: block;
  padding-left: 10px;
}

.ln-atcl-head h3 {
  font-size: 14px;
}

.ln-atcl-head p {
  font-size: 12px;
  margin: 10px 0;
  color: #aaa;
}

.fund-banner {
  font-family: 'ARS-maquette', sans-serif;
  font-size: 18px;
  margin: 0 auto;
  position: relative;
}

.fund-banner img {
  position: absolute;
  width: 60px;
  margin: 10px;
}

.fund-banner h4 {
  display: block;
  height: 40px;
  font-size: 18px;
  font-weight: bold;
  line-height: 1;
  background-color: #f42;
  color: #fff;
  padding-left: 80px;
  padding-top: 10px;
}

.fund-banner p {
  font-family: 'Shentox', sans-serif;
}

.fb-pricetag {
  display: block;
  background: rgba(255, 68, 34, 0.08);
  padding-top: 5px;
  padding-left: 80px;
  height: 60px;
}

.fb-pricetag h5 {
  font-size: 18px;
}

.fb-pricetag p {
  font-size: 12px;
}

.fb-local-offer {
  display: block;
  border-bottom: solid 1px #f42;
  font-size: 13px;
  background: rgba(255, 68, 34, 0.025);
}

.fb-local-offer a {
  color: #555;
  display: flex;
  align-items: center;
  padding: 15px;
}

.fb-local-offer i {
  color: rgba(0, 0, 0, 0.9);
}

.fb-local-offer-bottom {
  display: block;
  background: rgba(255, 68, 34, 0.025);
  padding: 10px 16px 22px 16px;
}

.fb-local-offer-bottom p {
  font-size: 12px;
  color: #555;
}

.fb-local-offer-icon {
  font-size: 18px;
}

.fb-local-offer span {
  margin-left: 10px;
}

.fourth-banner {
  display: none;
}

.sections-grid a {
  display: block;
  color: #f8f8f8;
}

.sections-grid h3 {
  font-size: 20px;
  font-family: Maquette, sans-serif;
  margin: 20px 0;
  color: #f42;
}

.latest-deals h2,
.latest-news h2 {
  color: #f42;
}

.sections-grid {
  margin: 15px 0;
}

.sg-article-list {
  width: 90%;
  margin: 0 auto;
}

.sg-article-list li {
  border-bottom: rgb(223, 221, 221) 1px solid;
  color: #555;
  padding: 10px 0;
  list-style-position: outside;
  font-size: 13px;
}

.sg-article-list ul {
  list-style: none;
}

.sg-article-list ul li::before {
  content: "\2022";
  color: #f42;
  font-weight: bold;
  display: inline-block;
  width: 1em;
  margin-left: -1em;
}

.bckg-image {
  width: 100%;
  height: 276px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.sg-img1 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/app-store-apple-hed-796x412.png');
}

.sg-img2 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/oneplus-love-letter.png');
}

.sg-img3 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/Trump-Twitter-796x418.jpg');
}

.sg-img4 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/hilarious.jpg');
}

.sg-img5 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/learnhtml.png');
}

.sg-img6 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/stop-saying.png');
}

.sg-img7 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/microlino.png');
}

.sg-img8 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)), url('../images/massive.jpg');
}

.sub-article img {
  width: 96px;
  height: 96px;
}

.sub-article div {
  display: block;
  width: 65%;
  padding: 10px 14px;
}

.footer-legal p {
  display: block;
}

.sub-article div p {
  font-size: 14px;
}

.bckg-image h5 {
  font-size: 14px;
  color: #fff;
}

.bckg-image ul {
  list-style-type: none;
  color: #fff;
  margin: 0 10px;
}

.bckg-image h3,
.bckg-image h5 {
  margin: 0 10px;
}

.bckg-image li {
  display: inline-block;
  margin-bottom: 10px;
}

.sub-article {
  display: flex;
  color: #f42;
  margin: 2px 0;
  justify-content: space-between;
  background-color: rgba(255, 68, 34, 0.06);
}

.sub-article h3 {
  margin: -2px 0;
  font-size: 13px;
}

.footer-links {
  background-color: #131313;
}

.footer-links-ln1 {
  display: flex;
  justify-content: center;
  padding-top: 2.5em;
  margin-bottom: 1.5em;
}

.footer-links-ln2 {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding-bottom: 2.5em;
}

.footer-links-ln2 a {
  text-transform: uppercase;
  font-size: 13px;
  font-family: Shentox, sans-serif;
  color: #aaa;
}

.footer-links-ln2 li {
  margin: 10px;
}

.footer-links li {
  list-style-type: none;
}
/* ... */

